src/test/ui/error-codes/E0663.stderr
error[E0663]: input operand constraint contains '+'
  --> $DIR/E0663.rs:8:17
   |
LL |               : "+test"("a")
   |                 ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0663`.
